--- a/pages/model/custom/index.wxml
+++ b/pages/model/custom/index.wxml
@@ -20,11 +20,11 @@
 
 <view class="theme_content" style="border-bottom: solid 1px #e5e5e5">
   <view class="content_input">
-    <i-icon type="label_fill" size="18" class="input_icon" />
+    <i-icon type="label_fill" size="24" class="input_icon" />
     <input placeholder="活动主题（不超过35个字符）" />
   </view>
   <view class="content_input">
-    <i-icon type="time_fill" size="18" class="input_icon" />
+    <i-icon type="time_fill" size="24" class="input_icon" />
     <picker mode="multiSelector" value="{{startActTime}}" bindchange="changestartActTime" bindcolumnchange="changeStartTimeColumn" range="{{startActTimeArr}}">
       <view class="time_picker_content">
         {{startActTimeArr[0][startActTime[0]]}}年{{startActTimeArr[1][startActTime[1]]}}月{{startActTimeArr[2][startActTime[2]]}}日 {{startActTimeArr[3][startActTime[3]]}}:{{startActTimeArr[4][startActTime[4]]}} 开始
@@ -36,18 +36,18 @@
       <view class="time_picker_content" wx:if="{{endTimeInput}}">
         {{endActTimeArr[0][endActTime[0]]}}年{{endActTimeArr[1][endActTime[1]]}}月{{endActTimeArr[2][endActTime[2]]}}日 {{endActTimeArr[3][endActTime[3]]}}:{{endActTimeArr[4][endActTime[4]]}} 结束
         <view class="clear_selct" catchtap="clearEndTime">
-          <icon type="clear" size="18" color="#d5d5d5" />
+          <icon type="clear" size="24" color="#d5d5d5" />
         </view>
       </view>
       <view class="time_picker_placeholder" wx:else>活动结束时间（选填）</view>
     </picker>
   </view>
   <view class="content_input">
-    <i-icon type="coordinates_fill" size="18" class="input_icon" />
+    <i-icon type="coordinates_fill" size="24" class="input_icon" />
     <input placeholder="活动详细地址（选填）" />
   </view>
   <view class="content_input">
-    <i-icon type="financial_fill" size="18" class="input_icon" />
+    <i-icon type="financial_fill" size="24" class="input_icon" />
     <view class="content_cell">
       <view class="content_cell_title">费用设置</view>
       {{financial === 0 ? "免费" : financial}}、{{joinerNum === 0 ? "人数不限" : joinerNum}}
@@ -57,7 +57,7 @@
 
 <view class="theme_content">
   <view class="content_input">
-    <i-icon type="success_fill" size="18" class="input_icon" />
+    <i-icon type="success_fill" size="24" class="input_icon" />
     <picker bindchange="pravicyChange" value="{{pravicy}}" range="{{pravicy_arr}}">
       <view class="time_picker_content">
         {{pravicy_arr[pravicy]}}
@@ -68,7 +68,7 @@
 
 <view class="theme_content">
   <view class="content_input">
-    <i-icon type="success_fill" size="18" class="input_icon" />
+    <i-icon type="success_fill" size="24" class="input_icon" />
     <picker bindchange="pravicyChange" value="{{real_name}}" range="{{real_name_arr}}">
       <view class="time_picker_content">
         {{real_name_arr[real_name]}}
@@ -87,13 +87,13 @@
 
 <view class="theme_control">
   <i-row>
-    <i-col span="6">
-      <button type="primary" size="mini" class="defult_btn"> 高级设置 </button>
+    <i-col span="7">
+      <button type="primary" size="mini" class="defult_btn" bindtap="seniorSetting"> 高级设置 </button>
     </i-col>
-    <i-col span="6">
+    <i-col span="7">
       <button type="primary" size="mini" class="defult_btn"> 预览 </button>
     </i-col>
-    <i-col span="12">
+    <i-col span="10">
       <button type="primary" size="mini" class="defult_btn public_btn"> 立即发布 </button>
     </i-col>
   </i-row>
