--- a/app.wxss
+++ b/app.wxss
@@ -10,7 +10,60 @@
 } 
 page{
   background: #f2f2f2;
+  box-sizing: border-box;
 }
 page .i-icon {
   display: block
+}
+.input_cell {
+  background: #fff;
+  padding: 0 30rpx;
+  margin-top: 40rpx;
+  position: relative;
+}
+
+.input_cell .input_cell_row {
+  border-bottom: solid 1px #e5e5e5;
+  padding: 20rpx 0;
+  min-height: 100rpx;
+  box-sizing: border-box;
+}
+
+.input_cell .input_cell_row:last-child {
+  border-bottom: none;
+}
+
+.input_cell .input_cell_row .label {
+  font-size: 32rpx;
+  line-height: 60rpx;
+  height: 60rpx;
+  float: left;
+  color: #333;
+}
+
+i-icon {
+  position: relative;
+  top: -4rpx;
+}
+
+button::after{
+  border: none
+}
+
+
+.input_cell_row .form_item {
+  text-align: right;
+}
+
+.input_cell .tip_text {
+  position: absolute;
+  height: 40rpx;
+  line-height: 40rpx;
+  padding-left: 20rpx;
+  bottom: -40rpx;
+  left: 0;
+  right: 0;
+  text-align: left;
+  color: #999;
+  font-size: 24rpx;
 }
