--- a/pages/model/custom/index.wxss
+++ b/pages/model/custom/index.wxss
@@ -30,18 +30,19 @@ page{
   right: 0;
   background: #fbfbfb;
   padding: 10rpx 8rpx;
+  box-shadow: 0 0 20rpx 0 rgba(0,0,0,.15)
 }
 .theme_control .defult_btn {
   margin: 10rpx 8rpx;
   border-radius: 8rpx;
-  border: solid 1rpx #e5e5e5;
   padding: 0;
-  height: 100rpx;
-  line-height: 100rpx;
-  font-size: 32rpx;
+  height: 60rpx;
+  line-height: 58rpx;
+  font-size: 28rpx;
   color: #333333;
   display: block;
   background: #fff;
+  border: solid 1rpx #e5e5e5
 }
 .theme_control .public_btn {
   background: #fda402;
@@ -66,7 +67,7 @@ page{
   position: absolute;
   left: 0;
   color: #d5d5d5;
-  top: 18rpx;
+  top: 12rpx;
   font-size: 40rpx;
 }
 .content_input input{
@@ -129,18 +130,17 @@ page{
   position: absolute;
   right: 44rpx;
   bottom: 44rpx;
-  width: 128rpx;
-  height: 128rpx;
-  padding: 24rpx 0;
+  width: 100rpx;
+  height: 100rpx;
+  padding: 20rpx 0;
   border-radius: 12rpx;
   background: #2c2008;
   text-align: center;
-  line-height: 120rpx;
+  line-height: 100rpx;
   z-index: 5;
   box-sizing: border-box;
 }
 .add_pic image{
-  width: 80rpx;
-  height: 80rpx;
-  opacity: 0.8
+  width: 60rpx;
+  height: 60rpx;
 }
