--- a/pages/model/seniorSetting/index.wxml
+++ b/pages/model/seniorSetting/index.wxml
@@ -10,7 +10,7 @@
       </view>
       <view class="select_tag_item">
         <view class="tag" bindtap="editMoreInfo">
-          <i-icon type="add" color="#d5d5d5" size="24"/>
+          <i-icon type="add" color="#d5d5d5" size="24" />
         </view>
       </view>
     </view>
@@ -20,11 +20,23 @@
 <view class="input_cell">
   <view class="input_cell_row">
     <view class="label">报名开始时间</view>
-    <view class="form_item"></view>
+    <view class="form_item">
+      <picker mode="multiSelector" value="{{startSignTime}}" bindchange="changeStartSignTime" bindcolumnchange="changeStartTimeColumn" range="{{startSignTimeArr}}">
+        <view class="time_picker_content">
+          {{startSignTimeArr[0][startSignTime[0]]}}年{{startSignTimeArr[1][startSignTime[1]]}}月{{startSignTimeArr[2][startSignTime[2]]}}日 {{startSignTimeArr[3][startSignTime[3]]}}:{{startSignTimeArr[4][startSignTime[4]]}}
+        </view>
+      </picker>
+    </view>
   </view>
   <view class="input_cell_row">
     <view class="label">报名截止时间</view>
-    <view class="form_item"></view>
+    <view class="form_item">
+      <picker mode="multiSelector" value="{{endSignTime}}" bindchange="changeEndSignTime" bindcolumnchange="changeEndTimeColumn" range="{{endSignTimeArr}}">
+        <view class="time_picker_content">
+          {{endSignTimeArr[0][endSignTime[0]]}}年{{endSignTimeArr[1][endSignTime[1]]}}月{{endSignTimeArr[2][endSignTime[2]]}}日 {{endSignTimeArr[3][endSignTime[3]]}}:{{endSignTimeArr[4][endSignTime[4]]}}
+        </view>
+      </picker>
+    </view>
   </view>
 </view>
 
@@ -35,7 +47,9 @@
   </view>
   <view class="input_cell_row">
     <view class="label">联系电话</view>
-    <view class="form_item"></view>
+    <view class="form_item">
+      <input placeholder="请输入联系电话" />
+    </view>
   </view>
 </view>
 
@@ -55,26 +69,6 @@
     <view class="label">隐藏活动地址</view>
     <view class="form_item">
       <switch id="hideActLocation" color="#fda402" checked="{{hideActLocation}}" bindchange="switchChange" />
-    </view>
-  </view>
-</view>
-
-<view class="input_cell">
-  <view class="tip_text">开启后，详情页将不显示照片墙</view>
-  <view class="input_cell_row">
-    <view class="label">隐藏照片墙</view>
-    <view class="form_item">
-      <switch id="hidePicWall" color="#fda402" checked="{{hidePicWall}}" bindchange="switchChange" />
-    </view>
-  </view>
-</view>
-
-<view class="input_cell">
-  <view class="tip_text">开启后，详情页将不支持打赏功能</view>
-  <view class="input_cell_row">
-    <view class="label">隐藏打赏功能</view>
-    <view class="form_item">
-      <switch id="hideRewardFn" color="#fda402" checked="{{hideRewardFn}}" bindchange="switchChange" />
     </view>
   </view>
 </view>
