--- a/pages/model/custom/index.wxml
+++ b/pages/model/custom/index.wxml
@@ -6,7 +6,7 @@
 <view class="theme_pic">
   <view class="theme_pic_frame">
     <view class="add_pic">
-       <image src="../images/icon_camera.png" mode="aspectFit"/>
+      <image src="../images/icon_camera.png" mode="aspectFit" />
     </view>
     <swiper indicator-dots="true" indicator-color="rgba(255, 255, 255, 0.3)" indicator-active-color="#ffffff">
       <block wx:for="{{pic_list}}" wx:key="*this">
@@ -21,18 +21,18 @@
 <view class="theme_content" style="border-bottom: solid 1px #e5e5e5">
   <view class="content_input">
     <i-icon type="label_fill" size="24" class="input_icon" />
-    <input placeholder="活动主题（不超过35个字符）" />
+    <input placeholder="活动主题（不超过35个字符）" value="{{title}}" data-name="title" maxlength="35" bindinput="inputOnChange" />
   </view>
   <view class="content_input">
     <i-icon type="time_fill" size="24" class="input_icon" />
-    <picker mode="multiSelector" value="{{startActTime}}" bindchange="changestartActTime" bindcolumnchange="changeStartTimeColumn" range="{{startActTimeArr}}">
+    <picker mode="multiSelector" data-name="beginTime" value="{{startActTime}}" bindchange="onTimeChange" bindcolumnchange="changeStartTimeColumn" range="{{startActTimeArr}}">
       <view class="time_picker_content">
         {{startActTimeArr[0][startActTime[0]]}}年{{startActTimeArr[1][startActTime[1]]}}月{{startActTimeArr[2][startActTime[2]]}}日 {{startActTimeArr[3][startActTime[3]]}}:{{startActTimeArr[4][startActTime[4]]}} 开始
       </view>
     </picker>
   </view>
   <view class="content_input">
-    <picker mode="multiSelector" value="{{endActTime}}" bindchange="changeEndActTime" bindcolumnchange="changeEndTimeColumn" range="{{endActTimeArr}}">
+    <picker mode="multiSelector" data-name="endTime" value="{{endActTime}}" bindchange="onTimeChange" bindcolumnchange="changeEndTimeColumn" range="{{endActTimeArr}}">
       <view class="time_picker_content" wx:if="{{endTimeInput}}">
         {{endActTimeArr[0][endActTime[0]]}}年{{endActTimeArr[1][endActTime[1]]}}月{{endActTimeArr[2][endActTime[2]]}}日 {{endActTimeArr[3][endActTime[3]]}}:{{endActTimeArr[4][endActTime[4]]}} 结束
         <view class="clear_selct" catchtap="clearEndTime">
@@ -58,9 +58,9 @@
 <view class="theme_content">
   <view class="content_input">
     <i-icon type="success_fill" size="24" class="input_icon" />
-    <picker bindchange="pravicyChange" value="{{pravicy}}" range="{{pravicy_arr}}">
+    <picker bindchange="onPickChange" data-name="publicType" value="{{activity.publicType}}" range="{{pravicy_arr}}">
       <view class="time_picker_content">
-        {{pravicy_arr[pravicy]}}
+        {{pravicy_arr[activity.publicType]}}
       </view>
     </picker>
   </view>
@@ -69,9 +69,9 @@
 <view class="theme_content">
   <view class="content_input">
     <i-icon type="success_fill" size="24" class="input_icon" />
-    <picker bindchange="pravicyChange" value="{{real_name}}" range="{{real_name_arr}}">
+    <picker bindchange="onPickChange" data-name="anonSignUp" value="{{activity.anonSignUp}}" range="{{real_name_arr}}">
       <view class="time_picker_content">
-        {{real_name_arr[real_name]}}
+        {{real_name_arr[activity.anonSignUp]}}
       </view>
     </picker>
   </view>
@@ -82,7 +82,8 @@
   </view>
 </view>
 <view class="agreement_text">
-  <icon type="success" size="12" color="#fda402"/> 同意<text style="color:#fda402">《报名吧服务协议》</text>
+  <icon type="success" size="12" color="#fda402" /> 同意
+  <text style="color:#fda402">《报名吧服务协议》</text>
 </view>
 
 <view class="theme_control">
