--- a/app.wxss
+++ b/app.wxss
@@ -12,6 +12,10 @@ page{
   background: #f2f2f2;
   box-sizing: border-box;
 }
+image{
+  width: 100%;
+  height: 100%;
+}
 page .i-icon {
   display: block
 }
