--- a/pages/home/home/index.wxss
+++ b/pages/home/home/index.wxss
@@ -1,1 +1,75 @@
 /* pages/home/home/index.wxss */
+
+.active_list {
+  height: calc(90% - 42px);
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: #fff;
+  padding-left: 30rpx;
+  box-sizing: border-box;
+}
+
+.active_list view {
+  box-sizing: border-box;
+}
+
+.active_card {
+  height: 221rpx;
+  padding: 30rpx;
+  padding-left: 0;
+  border-bottom: solid 1rpx #e6e6e6;
+  display: block;
+  width: 100%;
+}
+
+.seckill_tab .tab_item {
+  width: 33.3333%;
+}
+
+.active_logo {
+  width: 160rpx;
+  height: 160rpx;
+  float: left;
+  margin-right: 30rpx;
+}
+
+.active_name {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 36rpx;
+  height: 72rpx;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  margin-bottom: 15rpx;
+}
+
+.active_sponsor {
+  font-size: 24rpx;
+  line-height: 28rpx;
+  margin-bottom: 15rpx;
+  color: #666666;
+  height: 28rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.active_info {
+  height: 30rpx;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.active_info .active_info_item {
+  height: 30rpx;
+  line-height: 30rpx;
+  color: #999999;
+  font-size: 20rpx;
+}
+.active_info .active_info_item text {
+  color: #ff711b;
+}
