--- a/pages/user/user/index.wxml
+++ b/pages/user/user/index.wxml
@@ -1,3 +1,4 @@
 <!--pages/user/user/index.wxml-->
 <mp-navigation-bar loading="{{loading}}" show="{{true}}" animated="{{true}}" background="#ffffff" title="我">
 </mp-navigation-bar>
+<rich-text nodes="{{htmlStr}}"></rich-text>
