--- a/pages/hot/hot.wxss
+++ b/pages/hot/hot.wxss
@@ -1,23 +1,43 @@
-/* pages/home/home/index.wxss */
+/* pages/hot/hot.wxss */
 
-page{
-  background: #ffffff
+.hot_page {
+  box-sizing: border-box;
 }
-.seckill_tab{
-  position: fixed!important;
-  left: 0;
-  right: 0;
-  z-index: 10;
+
+.hot_page view {
+  box-sizing: border-box;
 }
+
+.location_row {
+  height: 80rpx;
+  background: #eee;
+  padding: 0 30rpx;
+  position: relative;
+}
+
+.location_row::after {
+  content: "";
+  width: 0px; /*  宽高设置为0，很重要，否则达不到效果 */
+  height: 0px;
+  border: 12rpx solid #999;
+  border-bottom-color: transparent; /* 设置透明背景色 */
+  border-left-color: transparent;
+  border-right-color: transparent;
+  position: absolute;
+  right: 30rpx;
+  top: 34rpx;
+}
+
+.location_row .location_picker {
+  height: 80rpx;
+  font-size: 28rpx;
+  color: #333;
+  line-height: 80rpx;
+}
+
 .active_list {
-  margin-top: 84rpx;
   background: #fff;
   padding-left: 30rpx;
-  box-sizing: border-box;
-}
-
-.active_list view {
-  box-sizing: border-box;
 }
 
 .active_card {
@@ -27,10 +47,6 @@ page{
   border-bottom: solid 1rpx #e6e6e6;
   display: block;
   box-sizing: border-box;
-}
-
-.seckill_tab .tab_item {
-  width: 33.3333%;
 }
 
 .active_logo {
@@ -56,7 +72,7 @@ page{
   font-size: 24rpx;
   line-height: 28rpx;
   margin-bottom: 15rpx;
-  color: #666666;
+  color: #666;
   height: 28rpx;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -70,12 +86,14 @@ page{
   flex-wrap: nowrap;
   justify-content: space-between;
 }
+
 .active_info .active_info_item {
   height: 30rpx;
   line-height: 30rpx;
-  color: #999999;
+  color: #999;
   font-size: 20rpx;
 }
+
 .active_info .active_info_item text {
   color: #ff711b;
 }
